--- a/src/TemplateCoreMaterial/project.json
+++ b/src/TemplateCoreMaterial/project.json
@@ -22,6 +22,8 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
+    "Microsoft.AspNetCore.Server.WebListener":"1.0.0-rc2-final",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "Microsoft.EntityFrameworkCore.Tools":
@@ -50,7 +52,6 @@
     "TemplateCoreMaterial.Model": "1.0.0-*",
     "TemplateCoreMaterial.Service": "1.0.0-*",
     "BundlerMinifier.Core": "2.2.281",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
     "Microsoft.EntityFrameworkCore.SqlServer.Design": "1.0.1",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
