--- a/src/TemplateCoreMaterial/appsettings.json
+++ b/src/TemplateCoreMaterial/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings": 
   {
-    //"TemplateConnection": "Server=WINDOWS\\ADENIALSQL;Initial Catalog=TemplateCore;User Id=sa; Password=1122334455"
-    "TemplateConnection": "Server=(localdb)\\mssqllocaldb;Database=TemplateCoreMaterial;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TemplateConnection": "Server=WINDOWS\\ADENIALSQL;Initial Catalog=TemplateCoreMaterial;User Id=sa; Password=1122334455"
+    //"TemplateConnection": "Server=(localdb)\\mssqllocaldb;Database=TemplateCoreMaterial;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
