Upgrade from 1.0.1 to 1.1.0

--- a/src/TemplateCoreMaterial/appsettings.json
+++ b/src/TemplateCoreMaterial/appsettings.json
@@ -1,8 +1,9 @@
 ﻿{
-  "ConnectionStrings": 
+  "ConnectionStrings":
   {
-    "TemplateConnection": "Server=WINDOWS\\ADENIALSQL;Initial Catalog=TemplateCoreMaterial;User Id=sa; Password=1122334455"
-    //"TemplateConnection": "Server=(localdb)\\mssqllocaldb;Database=TemplateCoreMaterial;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"TemplateConnection": "Server=cmsinstance.c11xwy9nnv6f.us-west-2.rds.amazonaws.com;Initial Catalog=TemplateCoreMaterial;User Id=namox; Password=1122334455"
+    "TemplateConnection": "Server=(localdb)\\mssqllocaldb;Database=TemplateCoreMaterial;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"TemplateConnection": "Server=(LocalDb)\\v11.0;Database=TemplateCoreMaterial;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
