minor changes, can add user selecting roles.

--- a/src/TemplateCoreMaterial/appsettings.json
+++ b/src/TemplateCoreMaterial/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings":
   {
-    "TemplateConnection": "Server=(localdb)\\mssqllocaldb;Database=TemplateCoreMaterial;Trusted_Connection=True;MultipleActiveResultSets=true"
-    //"TemplateConnection": "Server=(LocalDb)\\v11.0;Database=TemplateCoreMaterial;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"TemplateConnection": "Server=(localdb)\\mssqllocaldb;Database=TemplateCoreMaterial;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TemplateConnection": "Server=(LocalDb)\\v11.0;Database=TemplateCoreMaterial;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
