changes to prepare template.

--- a/src/TemplateCoreMaterial.Model/project.json
+++ b/src/TemplateCoreMaterial.Model/project.json
@@ -26,7 +26,7 @@
     //"warningsAsErrors": true,
     "additionalArguments":
     [
-      "/additionalfile:..//..//stylecop.json"
+      //"/additionalfile:..//..//stylecop.json"
     ]
   }
 }
