--- a/src/TemplateCoreMaterial.Repository/project.json
+++ b/src/TemplateCoreMaterial.Repository/project.json
@@ -27,7 +27,7 @@
     //"warningsAsErrors": true,
     "additionalArguments":
     [
-      "/additionalfile:..//..//stylecop.json"
+      //"/additionalfile:..//..//stylecop.json"
     ]
   }
 }
