--- a/src/TemplateCoreMaterial/project.json
+++ b/src/TemplateCoreMaterial/project.json
@@ -92,7 +92,7 @@
     "xmlDoc": "true",
     "additionalArguments":
     [
-      "/additionalfile:..//..//stylecop.json"
+      //"/additionalfile:..//..//stylecop.json"
     ],
     //"warningsAsErrors" : true,
     "emitEntryPoint": true,
